Restore sonatype serverId to sonatype-nexus-staging

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,27 @@
     <profiles>
         <profile>
             <id>release</id>
+            <distributionManagement>
+                <!-- http://central.sonatype.org/pages/apache-maven.html -->
+                <!-- The settings.xml file should contain: -->
+                <!-- <settings> -->
+                <!-- <servers> -->
+                <!-- <server> -->
+                <!-- <id>sonatype-nexus-staging</id> -->
+                <!-- <username>your-jira-id</username> -->
+                <!-- <password>your-jira-pwd</password> -->
+                <!-- </server> -->
+                <!-- </servers> -->
+                <!-- </settings> -->
+                <snapshotRepository>
+                    <id>sonatype-nexus-staging</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>sonatype-nexus-staging</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
             <build>
                 <plugins>
                     <plugin>
@@ -50,36 +71,6 @@
         <developerConnection>scm:git:git@github.com:RoaringBitmap/RoaringBitmap.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
-<!--
-The settings.xml file should contain:
-
-<settings>
-  <servers>
-    <server>
-      <id>ossrh</id>
-      <username>your-jira-id</username>
-      <password>your-jira-pwd</password>
-    </server>
-  </servers>
-</settings>
-
-
--->
-<!--<distributionManagement>
-  <snapshotRepository>
-    <id>ossrh</id>
-    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-  </snapshotRepository>
-  <repository>
-    <id>ossrh</id>
-    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-  </repository>
-</distributionManagement>-->
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>9</version>
-  </parent>
     <build>
         <plugins>
             <plugin>
@@ -148,7 +139,6 @@ The settings.xml file should contain:
                 <configuration>
                     <goals>deploy</goals>
                     <releaseProfiles>release</releaseProfiles>
-<!--                     <arguments>-Prelease</arguments> -->
                     <tagNameFormat>RoaringBitmap-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
@@ -157,18 +147,17 @@ The settings.xml file should contain:
             <!-- http://www.sonatype.org/nexus/2014/10/08/distribute-project-artifacts-in-maven-central-with-nexus-oss/ -->
             <!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
 
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.8</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>ossrh</serverId>
+                    <serverId>sonatype-nexus-staging</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <stagingProfileId>3a809bf4297e26</stagingProfileId>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
-            </plugin>-->
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
