[maven-release-plugin] prepare release RoaringBitmap-0.6.60

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.roaringbitmap</groupId>
     <artifactId>RoaringBitmapParent</artifactId>
-    <version>0.6.60-SNAPSHOT</version>
+    <version>0.6.60</version>
 
     <packaging>pom</packaging>
 
@@ -74,7 +74,7 @@
         <connection>scm:git:git@github.com:RoaringBitmap/RoaringBitmap.git</connection>
         <url>scm:git:git@github.com:RoaringBitmap/RoaringBitmap.git</url>
         <developerConnection>scm:git:git@github.com:RoaringBitmap/RoaringBitmap.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>RoaringBitmap-0.6.60</tag>
     </scm>
     <build>
         <plugins>
